install/resources/console/console.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: console
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: console
  template:
    metadata:
      labels:
        app: console
    spec:
      serviceAccountName: console-server
      volumes:
      - name: cache
        emptyDir: {}
      - name: config
        secret:
          secretName: console-config
      containers:
      ### API
      - name: console-api
        image: quay.io/eyefloaters/console-api:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config
          mountPath: /deployments/console-config.yaml
          subPath: console-config.yaml
      - name: console-ui
        image: quay.io/eyefloaters/console-ui:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: cache
          mountPath: /app/.next/cache
